<!--
  Copyright 2013 Abhijit Kalamkar. All rights reserved.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CareTakerActivity$CareTakerSectionFragment" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_name_please"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/personName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textCapWords|textPersonName" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/tts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speak_out"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save" />

</LinearLayout>
