<!--   Copyright 2013 Abhijit Kalamkar. All rights reserved. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CareTakerActivity$CareTakerHomeFragment" >

    <ImageButton
        android:id="@+id/addCareGiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_action_add_person" />

    <ListView
        android:id="@+id/plan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/addCareGiver"
        android:layout_below="@+id/textView1" >
        
    </ListView>

    <ImageButton
        android:id="@+id/addEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/addCareGiver"
        android:layout_toLeftOf="@+id/addCareGiver"
        android:src="@drawable/ic_action_add_plan" />

    <TextView
        android:id="@+id/numPlans"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/plan"
        android:layout_below="@+id/numPlans"
        android:text="@string/plans"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/numCareGivers"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/numPlans"
        android:layout_alignBottom="@+id/numPlans"
        android:layout_alignRight="@+id/textView2"
        android:layout_marginRight="16dp"
        android:text="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numCareGivers"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/textView3"
        android:text="@string/caregivers"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/plan"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="14dp"
        android:text="@string/my_plan"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

</RelativeLayout>
